<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/azul1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_title"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:id="@+id/registroNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_name"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            />
        <EditText
            android:id="@+id/registroModalidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_modality"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            />
        <EditText
            android:id="@+id/registroSalario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_salary"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul3"
            android:text="@string/registration_button"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="30dp"
            android:textSize="22sp"
            android:textAllCaps="true"
            ></Button>
    </LinearLayout>
</ScrollView>